fixed horizontal scroll and added justifying content

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -46,6 +46,7 @@ li {
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3);
     overflow: hidden;
     margin: 20px;
+    position: relative;
 }
 
 .lesson-list__card:hover {
@@ -53,8 +54,8 @@ li {
 }
 
 .card_circle {
-    height: 400px;
-    width: 450px;
+    height: 100%;
+    width: 100%;
     background: url(http://widewallpaper.info/wp-content/uploads/2015/11/Nature-HD-Wallpaper-1080p.jpg) no-repeat;
     background-size: cover;
     position: absolute;
@@ -121,6 +122,7 @@ h2 small {
 .lessons-list {
     display: flex;
     flex-flow: row wrap;
+    justify-content: center;
 }
 
 .lessons_list .list_item {
@@ -203,7 +205,6 @@ h2 small {
     left: 50%;
     top: 50%;
     border-radius: 50%;
-    padding: 50%;
     width: 32px;
     height: 32px;
     background-color: currentColor;
